Fixed z-index for the nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ header{
     top: 0px;
     width: 100%;
     background-color: #fff;
+    z-index: 1;
 }
 
 nav{
